recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: '=' expected but ';' found.
var length
^Spiral:5: error: '=' expected but ';' found.
if (steps!=0) {
^